# Bank-FastAPI-DIO

./: .env.example  .gitignore  bank.db  pyproject.toml
app/: main.py
app/core/: config.py  database.py  security.py
app/models/: account.py  transaction.py
app/routers/: auth.py  banking.py
app/schemas/: account.py  auth.py  transaction.py
